--- a/res/layout/fragment_login.xml
+++ b/res/layout/fragment_login.xml
@@ -51,4 +51,16 @@
         android:layout_below="@+id/fragment_login_password"
         android:layout_marginTop="41dp"
         android:text="Login" />
+
+    <TextView
+        android:id="@+id/fragment_login_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:visibility ="invisible"
+        android:textColor="#ff0000"
+        android:text="Failed to login. Please check your credentials." />
+    
 </RelativeLayout>
